@@ -39,9 +39,9 @@ public class FerramentaServiceImpl implements FerramentaService {
     CategoriaRepository categoriaRepository;
 
     @Override
-    public Response getAll() {
+    public Response getAll(int page, int pageSize) {
         try {
-            return Response.ok(repository.findAll().stream()
+            return Response.ok(repository.findAll().page(page, pageSize).stream()
                     .sorted(Comparator.comparing(EntityClass::getId).reversed()).map(ProdutoResponseDTO::new).collect(Collectors.toList())).build();
         }catch (Exception e){
             return Response.status(400).build();
@@ -49,9 +49,21 @@ public class FerramentaServiceImpl implements FerramentaService {
     }
 
     @Override
-    public Response getAllAdmin() {
+    public long count() {
         try {
-            return Response.ok(repository.findAll().stream().filter(EntityClass::getAtivo).map(ProdutoAdminResponseDTO::new).collect(Collectors.toList())).build();
+            return repository.findAll()
+                    .stream().filter(EntityClass::getAtivo)
+                    .toList().size();
+
+        } catch (Exception e) {
+            return 0;
+        }
+    }
+
+    @Override
+    public Response getAllAdmin(int page, int pageSize) {
+        try {
+            return Response.ok(repository.findAll().page(page, pageSize).stream().filter(EntityClass::getAtivo).map(ProdutoAdminResponseDTO::new).collect(Collectors.toList())).build();
         }catch (Exception e){
             return Response.status(400).build();
         }
